--- a/StudyNotes/ReactiveCocoa/ReactiveCocoa/Base.lproj/Main.storyboard
+++ b/StudyNotes/ReactiveCocoa/ReactiveCocoa/Base.lproj/Main.storyboard
@@ -161,10 +161,28 @@
                     <view key="view" contentMode="scaleToFill" id="Lmi-0M-QGx">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jit-nE-rs9">
+                                <rect key="frame" x="164" y="147" width="46" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                            </button>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hAf-dj-X1c">
+                                <rect key="frame" x="139" y="185" width="97" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="n6S-e2-TpI"/>
                     </view>
                     <navigationItem key="navigationItem" id="sUx-17-Wu3"/>
+                    <connections>
+                        <outlet property="loginButton" destination="Jit-nE-rs9" id="PgY-m0-Dnh"/>
+                        <outlet property="textField" destination="hAf-dj-X1c" id="jTo-1d-xfC"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qWh-bn-Yix" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
